Рабочий вариант. Кнопку добавил. Начало обработки исходящих СМС

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,7 +84,7 @@
 
     <!-- set_relay_time_period  -->
     <string name="titleRelayTimePeriod">Введите время включения РЕЛЕ.</string>
-    <string name="textDescription">Реле можно включить на заданное время по команде, посланной в СМС сообщении,
+    <string name="textDescriptionRelayTimePeriod">Реле можно включить на заданное время по команде, посланной в СМС сообщении,
         автоматически по любому выбранному событию (активный вход зоны, звонок с выбранного номера телефона), или по
         команде из голосового меню управления. Если время включения 00 мин – 00 сек, то реле будет включено постоянно, без
         отсчета времени включения.
